# StellarCredit-1.0

./: .env.contract  .gitignore  README.md  TEAM_SIGNATURE.md
.github/workflows/: deploy-frontend-vercel.yml
.soroban/: identity
ai-engine/: api_server.py  stellar_ai_scoring.py
backend/: package-lock.json  package.json  server.js  vercel.json
backend/services/: stellarService.js
backend/utils/: logger.js
contracts/: Cargo.toml
contracts/src/: lib.rs
docs/: ARCHITECTURE.md  BACKEND_VERCEL_DEPLOY.md  DEPLOYMENTS.md  DEPLOY_SUMMARY.md  FRONTEND_VERCEL_DEPLOY.md  INDEX.md  TECHNICAL_DOCUMENTATION.en.md  TECHNICAL_DOCUMENTATION.pt.md  VERCEL_DEPLOY_CONFIG.md  package-lock.json
frontend/: ADICIONAR_IMAGEM.md  README.md  README.pt.md  next.config.js  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx
frontend/src/app/[locale]/: page.tsx
frontend/src/app/[locale]/settings/: page.tsx
frontend/src/app/[locale]/transactions/: page.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/elisa/: ElisaChat.tsx
frontend/src/components/providers/: WalletDataProvider.tsx
frontend/src/components/ui/: Logo.tsx
frontend/src/components/wallet/: WalletButton.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: config.ts
frontend/src/services/: webauthn.ts
frontend/src/stores/: creditStore.ts  passkeyStore.ts  walletStore.ts
frontend/src/types/: passkeys.ts
scripts/: deploy_contract.sh
