[package]
name = "stellar-credit-contract"
version = "1.0.0"
edition = "2021"
authors = ["Atlantic Hacking HackMeridian 2025"]
description = "Stellar Credit Smart Contract - Sistema de Score de Crédito Descentralizado"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "stellar-credit-contract"
path = "src/bin/main.rs"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
